--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -42,8 +42,8 @@
 <h2>W4</h2>
 <h3>PDF</h3>
 <p><a href="/downloads/2021-協同產品設計實習-stage1-ag14.pdf">2021-協同產品設計實習-stage1-ag14.pdf</a></p>
-<br/><a href="/downloads/2021-03_2a_stage.7z"></a>Stage2-ag12
-<p><a href="https://40823152.github.io/stage2-ag12/content/index.html">stage2-ag12</a></p>
+<h1>Stage2-ag12</h1>
+<p><a href="https://40823125.github.io/stage2-ag12/content/index.html">stage2-ag12</a></p>
 <p>組員</p>
 <p><span><span> </span></span><a href="http://github.com/40823152/cd2021">40823152 repo</a><span><span> </span>|<span> </span></span><a href="http://40823152.github.io/cd2021">40823152 site</a><span><span> </span>|</span></p>
 <p><span><span> </span></span><a href="http://github.com/40823153/cd2021">40823153 repo</a><span><span> </span>|<span> </span></span><a href="http://40823153.github.io/cd2021">40823153 site</a><span><span> </span>|</span></p>
@@ -68,9 +68,9 @@
 <p></p>
 <p>w9:報告</p>
 <p><a href="https://40823152.github.io/stage2-ag12/content/index.html"></a></p>
-<h1>W6</h1>
-<h1>W7</h1>
-<h2>Heroku 網站建立</h2>
+<h2>W6</h2>
+<h2>W7</h2>
+<h3>Heroku 網站建立</h3>
 <p><a href="https://stage2-ag12.herokuapp.com/content/index.html">stage2-ag12-heroku網站</a></p>
 <p><strong>1.開通 Heroku 帳號(用學校email建立)</strong></p>
 <p><strong>2.建立一個 Herokuapp</strong></p>
@@ -197,14 +197,14 @@
 <p><img alt="" height="240" src="/images/2.1-2.jpg" width="500"/></p>
 <h3>2.2</h3>
 <p><a href="https://drive.google.com/drive/folders/1zqnQdyXmb-uHGltAk5lSACNNUaOuthIN?usp=sharing">籃球機2.2</a></p>
-<p><img alt="" height="237" src="/images/2.2-1.jpg" width="500"/></p>
-<p><img alt="" height="237" src="/images/2.2-2.jpg" width="500"/></p>
-<p><img alt="" height="239" src="/images/2.2-3.jpg" width="500"/></p>
-<p><img alt="" height="236" src="/images/2.2-4.jpg" width="500"/></p>
-<p><img alt="" height="238" src="/images/2.2-5.jpg" width="500"/></p>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/fPKHOBXYZwY" width="560"></iframe></p>
-<p></p>
-<h3>2.3</h3>
+<p><strong>無框版</strong></p>
+<p><img alt="" height="237" src="https://40823125.github.io/cd2021/images/2.2-1.jpg" width="500"/></p>
+<p><img alt="" height="237" src="https://40823125.github.io/cd2021/images/2.2-2.jpg" width="500"/></p>
+<p><img alt="" height="239" src="https://40823125.github.io/cd2021/images/2.2-3.jpg" width="500"/></p>
+<p><iframe allowfullscreen="allowfullscreen" data-mce-fragment="1" height="314" src="https://www.youtube.com/embed/fPKHOBXYZwY" width="560"></iframe></p>
+<h4><strong>有框版</strong></h4>
+<p><img alt="" height="236" src="https://40823125.github.io/cd2021/images/2.2-4.jpg" width="500"/></p>
+<p><img alt="" height="238" src="https://40823125.github.io/cd2021/images/2.2-5.jpg" width="500"/></p><h3>2.3</h3>
 <p><a href="https://drive.google.com/drive/folders/1gVL4FmbeqfpH1UVUGS85cwdQSOvvy683?usp=sharing">籃球機2.3</a></p>
 <p><img alt="" height="238" src="/images/2.3-1.jpg" width="500"/></p>
 <p><img alt="" height="238" src="/images/2.3-2.jpg" width="500"/></p>
