--- a/content/2.2.html
+++ b/content/2.2.html
@@ -135,14 +135,14 @@ img.add_border {
         </header>
     <div id="tipue_search_content">2.1 << <a href='2.1.html'>Previous</a> <a href='2.3.html'>Next</a> >> 2.3<br /><h1>2.2</h1>
 <p><a href="https://drive.google.com/drive/folders/1zqnQdyXmb-uHGltAk5lSACNNUaOuthIN?usp=sharing">籃球機2.2</a></p>
-<p><img alt="" height="237" src="./../images/2.2-1.jpg" width="500"/></p>
-<p><img alt="" height="237" src="./../images/2.2-2.jpg" width="500"/></p>
-<p><img alt="" height="239" src="./../images/2.2-3.jpg" width="500"/></p>
-<p><img alt="" height="236" src="./../images/2.2-4.jpg" width="500"/></p>
-<p><img alt="" height="238" src="./../images/2.2-5.jpg" width="500"/></p>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/fPKHOBXYZwY" width="560"></iframe></p>
-<p></p>
-<br />2.1 << <a href='2.1.html'>Previous</a> <a href='2.3.html'>Next</a> >> 2.3</div>
+<p><strong>無框版</strong></p>
+<p><img alt="" height="237" src="https://40823125.github.io/cd2021/images/2.2-1.jpg" width="500"/></p>
+<p><img alt="" height="237" src="https://40823125.github.io/cd2021/images/2.2-2.jpg" width="500"/></p>
+<p><img alt="" height="239" src="https://40823125.github.io/cd2021/images/2.2-3.jpg" width="500"/></p>
+<p><iframe allowfullscreen="allowfullscreen" data-mce-fragment="1" height="314" src="https://www.youtube.com/embed/fPKHOBXYZwY" width="560"></iframe></p>
+<h4><strong>有框版</strong></h4>
+<p><img alt="" height="236" src="https://40823125.github.io/cd2021/images/2.2-4.jpg" width="500"/></p>
+<p><img alt="" height="238" src="https://40823125.github.io/cd2021/images/2.2-5.jpg" width="500"/></p><br />2.1 << <a href='2.1.html'>Previous</a> <a href='2.3.html'>Next</a> >> 2.3</div>
         
     <!-- footer -->
       <div class="container">
