--- a/content/2.4.html
+++ b/content/2.4.html
@@ -134,11 +134,11 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">2.3 << <a href='2.3.html'>Previous</a> <br /><h1>2.4</h1>
-<p><a href="https://drive.google.com/drive/folders/1CCFrCBzbBhC9gnwaUUMYi5Cf7kd8Xkcz?usp=sharing">籃球機2.4</a></p>
+<p><a href="https://drive.google.com/drive/u/2/folders/1XVRti_HtuKFJgPpvFl1Ar3qx7v50zjCz">籃球機2.4</a></p>
 <p><img alt="" height="237" src="./../images/2.4-1.jpg" width="500"/></p>
 <p><img alt="" height="237" src="./../images/2.4-2.jpg" width="500"/></p>
-</div>
-</div><br />2.3 << <a href='2.3.html'>Previous</a> </div>
+<p><iframe allowfullscreen="allowfullscreen" data-mce-fragment="1" height="314" src="https://www.youtube.com/embed/C-K8pxvnJJE" width="560"></iframe></p>
+<p><iframe allowfullscreen="allowfullscreen" data-mce-fragment="1" height="314" src="https://www.youtube.com/embed/w2pv5GlT988" width="560"></iframe></p></div></div><br />2.3 << <a href='2.3.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
