W8&W9 add&basketball machine 2.4 update

--- a/content/W9.html
+++ b/content/W9.html
@@ -133,8 +133,9 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">W6 << <a href='W6.html'>Previous</a> <a href='Heroku 網站建立.html'>Next</a> >> Heroku 網站建立<br /><h1>W7</h1>
-<br />W6 << <a href='W6.html'>Previous</a> <a href='Heroku 網站建立.html'>Next</a> >> Heroku 網站建立</div>
+    <div id="tipue_search_content">W8 << <a href='W8.html'>Previous</a> <a href='Error exclude.html'>Next</a> >> Error exclude<br /><h1>W9</h1>
+<p><strong>協同報告</strong></p>
+<p><a href="https://40823153.github.io/stage2-ag12/downloads/2021-協同產品設計實習-stage2-ag12.pdf">2021-協同產品設計實習-stage2-ag12.pdf</a></p><br />W8 << <a href='W8.html'>Previous</a> <a href='Error exclude.html'>Next</a> >> Error exclude</div>
         
     <!-- footer -->
       <div class="container">
