--- a/config/content.htm
+++ b/config/content.htm
@@ -129,8 +129,10 @@
 </tr>
 </tbody>
 </table>
-<h1>Error exclude</h1>
-<h2>協同失誤</h2>
+<h2>W8</h2>
+<h2>W9</h2>
+<p><strong>協同報告</strong></p>
+<p><a href="https://40823153.github.io/stage2-ag12/downloads/2021-協同產品設計實習-stage2-ag12.pdf">2021-協同產品設計實習-stage2-ag12.pdf</a></p><h1>Error exclude</h1><h2>協同失誤</h2>
 <p>在協同時因為組員們的倉儲版本不同導致無法推送</p>
 <p><img alt="" height="113" src="https://localhost:8444/images/%E8%9E%A2%E5%B9%95%E6%93%B7%E5%8F%96%E7%95%AB%E9%9D%A2%202021-04-13%20194559.jpg" width="500"/></p>
 <p>最後我們只好將版本不同的倉儲刪掉重新協同</p>
@@ -217,7 +219,12 @@
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/97fUChcmisk" width="560"></iframe></p>
 <h3>2.4</h3>
 <p><a href="https://drive.google.com/drive/u/2/folders/1XVRti_HtuKFJgPpvFl1Ar3qx7v50zjCz">籃球機2.4</a></p>
+<p><strong>2.4.1</strong></p>
 <p><img alt="" height="237" src="/images/2.4-1.jpg" width="500"/></p>
 <p><img alt="" height="237" src="/images/2.4-2.jpg" width="500"/></p>
+<p><strong>2.4.2</strong></p>
 <p><iframe allowfullscreen="allowfullscreen" data-mce-fragment="1" height="314" src="https://www.youtube.com/embed/C-K8pxvnJJE" width="560"></iframe></p>
-<p><iframe allowfullscreen="allowfullscreen" data-mce-fragment="1" height="314" src="https://www.youtube.com/embed/w2pv5GlT988" width="560"></iframe></p></div></div>
+<p><iframe allowfullscreen="allowfullscreen" data-mce-fragment="1" height="314" src="https://www.youtube.com/embed/w2pv5GlT988" width="560"></iframe></p>
+<p><strong>2.4.3</strong></p>
+<p>擊球桿新增後轉功能，可以有效控制擊球的時機。</p>
+<p><iframe allowfullscreen="allowfullscreen" data-mce-fragment="1" height="314" src="https://www.youtube.com/embed/R4FlyPlJxqw" width="560"></iframe></p></div></div>
