--- a/content/W8.html
+++ b/content/W8.html
@@ -133,8 +133,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">W6 << <a href='W6.html'>Previous</a> <a href='Heroku 網站建立.html'>Next</a> >> Heroku 網站建立<br /><h1>W7</h1>
-<br />W6 << <a href='W6.html'>Previous</a> <a href='Heroku 網站建立.html'>Next</a> >> Heroku 網站建立</div>
+    <div id="tipue_search_content">Heroku 網站建立 << <a href='Heroku 網站建立.html'>Previous</a> <a href='W9.html'>Next</a> >> W9<br /><h1>W8</h1>
+<br />Heroku 網站建立 << <a href='Heroku 網站建立.html'>Previous</a> <a href='W9.html'>Next</a> >> W9</div>
         
     <!-- footer -->
       <div class="container">
