stage3-ag6&W10,11 add

--- a/config/content.htm
+++ b/config/content.htm
@@ -132,7 +132,22 @@
 <h2>W8</h2>
 <h2>W9</h2>
 <p><strong>協同報告</strong></p>
-<p><a href="https://40823153.github.io/stage2-ag12/downloads/2021-協同產品設計實習-stage2-ag12.pdf">2021-協同產品設計實習-stage2-ag12.pdf</a></p><h1>Error exclude</h1><h2>協同失誤</h2>
+<p><a href="https://40823153.github.io/stage2-ag12/downloads/2021-協同產品設計實習-stage2-ag12.pdf">2021-協同產品設計實習-stage2-ag12.pdf</a></p>
+<h1>stage3-ag6</h1>
+<p><a href="https://40823125.github.io/stage3-ag6">stage3-ag6 repo<span></span></a> | <a href="https://40823125.github.io/stage3-ag6/content/index.html">stage3-ag6 site</a><span> </span>|</p>
+<p>組長:<a href="https://github.com/40823152/cd2021">40823152 repo</a><span> | </span><a href="https://40823152.github.io/cd2021/content/index.html">40823152 site</a><span> |</span></p>
+<p>組員:</p>
+<p><a href="https://github.com/40823110/cd2021">40823110 repo</a><span> | </span><a href="https://40823110.github.io/cd2021/content/index.html">40823110 site</a><span> </span>|</p>
+<p><span><span></span></span><a href="https://github.com/40823125/cd2021">40823125 repo</a><span>|<span> </span></span><a href="https://40823125.github.io/cd2021/content/index.html">40823125 site</a><span><span> </span>|</span></p>
+<p><span></span><a href="https://github.com/40823153/cd2021">40823153 repo</a><span><span> </span>|<span> </span></span><a href="https://40823153.github.io/cd2021/content/index.html">40823153 site</a><span><a href="https://40823153.github.io/cd2021/content/index.html"><span> </span></a>|</span></p>
+<p><span><a href="https://github.com/40823117/cd2021">40823117 repo<span> </span></a>|<span> </span><a href="https://40823117.github.io/cd2021/content/index.html">40823117 site</a><span> </span>|</span></p>
+<p><span><a href="https://github.com/40823122/cd2021">40823122 repo<span> </span></a>|<span> </span><a href="https://40823122.github.io/cd2021/content/index.html">40823122 site</a><span> </span>|</span></p>
+<p><span><a href="https://github.com/40823129/cd2021">40823129 repo<span> </span></a>|<span> </span><a href="https://40823129.github.io/cd2021/content/index.html">40823129 site</a><span> </span>|</span></p>
+<p><span><a href="https://github.com/40823149/cd2021">40823149 repo<span> </span></a>|<span> </span><a href="https://40823149.github.io/cd2021/content/index.html">40823149 site<span> </span></a>|</span></p><h2>W10</h2>
+<h2>W11</h2>
+<p>remote API 操作測試</p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/WUDqe6oSfwo" width="560"></iframe></p>
+<p>目前在用2W1a.ttt時沒辦法使用老師給的內部IP 192.168.192.1+組別+排序別,進行連線</p><h1>Error exclude</h1><h2>協同失誤</h2>
 <p>在協同時因為組員們的倉儲版本不同導致無法推送</p>
 <p><img alt="" height="113" src="https://localhost:8444/images/%E8%9E%A2%E5%B9%95%E6%93%B7%E5%8F%96%E7%95%AB%E9%9D%A2%202021-04-13%20194559.jpg" width="500"/></p>
 <p>最後我們只好將版本不同的倉儲刪掉重新協同</p>
