--- a/content/task 1.html
+++ b/content/task 1.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li class='has-children'><a href='Stage1-ag14.html'>Stage1-ag14</a><ul class='dropdown'><li><a href='W1.html'>W1</a><li class='has-children'><a href='W2.html'>W2</a><ul class='dropdown'><li><a href='零件尺寸及示意圖.html'>零件尺寸及示意圖</a><li><a href='分組開會紀錄.html'>分組開會紀錄</a></li></ul><li class='has-children'><a href='W4.html'>W4</a><ul class='dropdown'><li><a href='PDF.html'>PDF</a></li></li></ul></ul><li class='has-children'><a href='Stage2-ag12.html'>Stage2-ag12</a><ul class='dropdown'><li class='has-children'><a href='W5.html'>W5</a><ul class='dropdown'><li><a href='產品目標.html'>產品目標</a></li></ul><li><a href='W6.html'>W6</a><li class='has-children'><a href='W7.html'>W7</a><ul class='dropdown'><li><a href='Heroku 網站建立.html'>Heroku 網站建立</a></li></ul><li><a href='W8.html'>W8</a><li><a href='W9.html'>W9</a></li></ul><li class='has-children'><a href='stage3-ag6.html'>stage3-ag6</a><ul class='dropdown'><li><a href='W10.html'>W10</a><li><a href='W11.html'>W11</a></li></ul><li class='has-children'><a href='Error exclude.html'>Error exclude</a><ul class='dropdown'><li><a href='協同失誤.html'>協同失誤</a></li></ul><li class='has-children'><a href='發球機版本.html'>發球機版本</a><ul class='dropdown'><li><a href='第1版.html'>第1版</a><li><a href='第2版.html'>第2版</a><li><a href='第3版.html'>第3版</a><li><a href='第4版.html'>第4版</a><li><a href='第5版.html'>第5版</a></li></ul><li class='has-children'><a href='籃球機版本.html'>籃球機版本</a><ul class='dropdown'><li><a href='版本一.html'>版本一</a><li class='has-children'><a href='版本二.html'>版本二</a><ul class='dropdown'><li><a href='2.1.html'>2.1</a><li><a href='2.2.html'>2.2</a><li><a href='2.3.html'>2.3</a><li><a href='2.4.html'>2.4</a></li>
+                     <li class='has-children'><a href='Stage1-ag14.html'>Stage1-ag14</a><ul class='dropdown'><li><a href='W1.html'>W1</a><li class='has-children'><a href='W2.html'>W2</a><ul class='dropdown'><li><a href='零件尺寸及示意圖.html'>零件尺寸及示意圖</a><li><a href='分組開會紀錄.html'>分組開會紀錄</a></li></ul><li class='has-children'><a href='W4.html'>W4</a><ul class='dropdown'><li><a href='PDF.html'>PDF</a></li></li></ul></ul><li class='has-children'><a href='Stage2-ag12.html'>Stage2-ag12</a><ul class='dropdown'><li class='has-children'><a href='W5.html'>W5</a><ul class='dropdown'><li><a href='產品目標.html'>產品目標</a></li></ul><li><a href='W6.html'>W6</a><li class='has-children'><a href='W7.html'>W7</a><ul class='dropdown'><li><a href='Heroku 網站建立.html'>Heroku 網站建立</a></li></ul><li><a href='W8.html'>W8</a><li><a href='W9.html'>W9</a></li></ul><li class='has-children'><a href='stage3-ag6.html'>stage3-ag6</a><ul class='dropdown'><li class='has-children'><a href='task 1.html'>task 1</a><ul class='dropdown'><li><a href='stage3-2a.html'>stage3-2a</a></li></ul><li><a href='task 2.html'>task 2</a></li></ul><li class='has-children'><a href='Error exclude.html'>Error exclude</a><ul class='dropdown'><li><a href='協同失誤.html'>協同失誤</a></li></ul><li class='has-children'><a href='發球機版本.html'>發球機版本</a><ul class='dropdown'><li><a href='第1版.html'>第1版</a><li><a href='第2版.html'>第2版</a><li><a href='第3版.html'>第3版</a><li><a href='第4版.html'>第4版</a><li><a href='第5版.html'>第5版</a></li></ul><li class='has-children'><a href='籃球機版本.html'>籃球機版本</a><ul class='dropdown'><li><a href='版本一.html'>版本一</a><li class='has-children'><a href='版本二.html'>版本二</a><ul class='dropdown'><li><a href='2.1.html'>2.1</a><li><a href='2.2.html'>2.2</a><li><a href='2.3.html'>2.3</a><li><a href='2.4.html'>2.4</a></li>
                       </ul>
                 </nav>
               </div>
@@ -133,8 +133,102 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">stage3-ag6 << <a href='stage3-ag6.html'>Previous</a> <a href='W11.html'>Next</a> >> W11<br /><h1>W10</h1>
-<br />stage3-ag6 << <a href='stage3-ag6.html'>Previous</a> <a href='W11.html'>Next</a> >> W11</div>
+    <div id="tipue_search_content">stage3-ag6 << <a href='stage3-ag6.html'>Previous</a> <a href='stage3-2a.html'>Next</a> >> stage3-2a<br /><h1>task 1</h1>
+<p>讀取 <a href="https://drive.google.com/file/d/1HETcW6z9bweibVH37jiziNbT71E8dgVU/view?usp=sharing">stage3_2a.txt</a>, 建立 Stage3 的分組倉儲, 分組網頁, 以及各組員倉儲及網頁連結.</p>
+<p><strong>老師的範例</strong>:</p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false"># open file, default is read mode, since txt content no chinese char
+# no encoding = "UTF-8" is needed
+with open("stage3_2a.txt") as fh:
+    # readlines will read into the whole line and put into list format
+    # has \n at the end of each line
+    data = fh.readlines()
+#print(len(data))
+for i in range(len(data)):
+    group = data[i].rstrip("\n").split("\t")
+    print(group)
+# the following will use group data to generate needed html</pre>
+<p><strong>第一版</strong>:將學號按組別排好</p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">with open("stage3_2a.txt") as fh:
+   #先將我們存起來stage3_2a.txt打開並命名為fh
+    data = fh.readlines()
+    #將stage3_2a.txt的資料以串列形式存為data
+for i in range(len(data)):
+    group = data[i].rstrip("\n").split("\t")
+    #先取出data list中的第i項,消除元素中/n,再以\t取出需要的文字
+    print(group[0]+group[0])
+    #先將group第0列推出
+    for j in range(1,18,1):
+    #設一個範圍,(1到18,每次加1,1&lt;=j&lt;18)
+        try:
+            print(group[j])
+        except:
+           continue
+        #這邊使用try.....except,因為有一組6個人,導致有空格,所以需要用continue讓迴圈繼續跑</pre>
+<p><strong>第二版</strong>:將40823122的學號修正</p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">with open("stage3_2a.txt") as fh:
+   #先將我們存起來stage3_2a.txt打開並命名為fh
+    data = fh.readlines()
+    #將stage3_2a.txt的資料以串列形式存為data
+for i in range(len(data)):
+    newdata = data[i].replace('4823122','40823122')
+    #因為40823122的學號打錯了,所以用 replace 把舊的替換成新的
+    group = newdata.rstrip("\n").split("\t")
+    #先取出newdata list中的第i項,消除元素中/n,再以\t取出需要的文字
+    print(group[0]+group[0])
+    #先將group第0列推出
+    for j in range(1,18,1):
+    #設一個範圍,(1到18,每次加1,1&lt;=j&lt;18)
+        try:
+            print(group[j])
+        except:
+           continue
+        #這邊使用try.....except,因為有一組6個人,導致有空格,所以需要用continue讓迴圈繼續跑</pre>
+<p><strong>第三版</strong>:以網頁的形式推出,但會告知</p>
+<p>print('&lt;p&gt;'+group[0]+' | &lt;a href="https://'+group[1]+'.github.io/'+group[0]+'"&gt;Website&lt;/a&gt; | &lt;a href="https://github.com/'+group[2]+'/'+group[0]+'"&gt;Repository&lt;/a&gt;&lt;/p&gt;')<br/>IndexError: list index out of range</p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">with open("stage3_2a.txt") as fh:
+   #先將我們存起來stage3_2a.txt打開並命名為fh
+    data = fh.readlines()
+    #將stage3_2a.txt的資料以串列形式存為data
+for i in range(len(data)):
+    newdata = data[i].replace('4823122','40823122')
+    #因為40823122的學號打錯了,所以用 replace 把舊的替換成新的
+    group = newdata.rstrip("\n").split("\t")
+    #先取出newdata list中的第i項,消除元素中/n,再以\t取出需要的文字
+    print('&lt;p&gt;'+group[0]+' | &lt;a href="https://'+group[1]+'.github.io/'+group[0]+'"&gt;Website&lt;/a&gt; | &lt;a href="https://github.com/'+group[2]+'/'+group[0]+'"&gt;Repository&lt;/a&gt;&lt;/p&gt;')
+    for j in range(1,18,1):
+    #設一個範圍,(1到18,每次加1,1&lt;=j&lt;18)
+        try:
+            print('&lt;p&gt;'+group[j]+' | Website:'+'&lt;a href="https://'+group[j]+'.github.io/cd2021'+'"&gt;'+group[j]+'&lt;/a&gt;'+' | Repository:'+'&lt;a href="https://github.com/'+group[j]+'/cd2021'+'"&gt;'+group[j]+'&lt;/a&gt; &lt;/p&gt;')
+        except:
+           continue
+        #這邊使用try.....except,因為有一組6個人,導致有空格,所以需要用continue讓迴圈繼續跑</pre>
+<p><strong>第四版</strong>:將a40823112修正</p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">with open("stage3_2a.txt") as fh:
+   #先將我們存起來stage3_2a.txt打開並命名為fh
+    data = fh.readlines()
+    #將stage3_2a.txt的資料以串列形式存為data
+for i in range(len(data)):
+    newdata1 = data[i].replace('4823122','40823122')
+    #因為40823122的學號打錯了,所以用 replace 把舊的替換成新的
+    newdata2 = newdata1.replace('\t\t','')
+    #因為有一組只有6人,所以用 replace 把空位刪除
+    group = newdata2.rstrip("\n").split("\t")
+    #先取出newdata list中的第i項,消除元素中/n,再以\t取出需要的文字
+    print('&lt;p&gt;'+group[0]+' | &lt;a href="https://'+group[1]+'.github.io/'+group[0]+'"&gt;Website&lt;/a&gt; | &lt;a href="https://github.com/'+group[2]+'/'+group[0]+'"&gt;Repository&lt;/a&gt;&lt;/p&gt;')
+    for j in range(1,18,1):
+    #設一個範圍,(1到18,每次加1,1&lt;=j&lt;18)
+        try:
+            n = group[j].replace('a40823112','40823112')
+            print('&lt;p&gt;'+group[j]+' | Website:'+'&lt;a href="https://'+group[j]+'.github.io/cd2021'+'"&gt;'+n+'&lt;/a&gt;'+' | Repository:'+'&lt;a href="https://github.com/'+group[j]+'/cd2021'+'"&gt;'+n+'&lt;/a&gt; &lt;/p&gt;')
+        except:
+           continue
+        #這邊使用try.....except,因為有一組6個人,導致有空格,所以需要用continue讓迴圈繼續跑</pre>
+<p>參考資料:</p>
+<p><a href="https://docs.python.org/zh-tw/3/tutorial/controlflow.html#the-range-function">python 語法 renge</a></p>
+<p><a href="https://edu.tcfst.org.tw/edm/08C009/images/Python%E5%9F%BA%E6%9C%AC%E8%AA%9E%E6%B3%95.pdf">python 基本語法</a></p>
+<p><a href="https://www.w3schools.com/python/python_lists_loop.asp">python loop 原理</a></p>
+<p><a href="https://40823136.github.io/cd2021/content/task1.html">40823136 Website</a></p>
+<br />stage3-ag6 << <a href='stage3-ag6.html'>Previous</a> <a href='stage3-2a.html'>Next</a> >> stage3-2a</div>
         
     <!-- footer -->
       <div class="container">
