--- a/content/task 1.html
+++ b/content/task 1.html
@@ -155,7 +155,7 @@ for i in range(len(data)):
 for i in range(len(data)):
     group = data[i].rstrip("\n").split("\t")
     #先取出data list中的第i項,消除元素中/n,再以\t取出需要的文字
-    print(group[0]+group[0])
+    print(group[0]+'|'+group[0])
     #先將group第0列推出
     for j in range(1,18,1):
     #設一個範圍,(1到18,每次加1,1&lt;=j&lt;18)
@@ -174,7 +174,7 @@ for i in range(len(data)):
     #因為40823122的學號打錯了,所以用 replace 把舊的替換成新的
     group = newdata.rstrip("\n").split("\t")
     #先取出newdata list中的第i項,消除元素中/n,再以\t取出需要的文字
-    print(group[0]+group[0])
+    print(group[0]+'|'+group[0])
     #先將group第0列推出
     for j in range(1,18,1):
     #設一個範圍,(1到18,每次加1,1&lt;=j&lt;18)
@@ -195,31 +195,60 @@ for i in range(len(data)):
     group = newdata.rstrip("\n").split("\t")
     #先取出newdata list中的第i項,消除元素中/n,再以\t取出需要的文字
     print('&lt;p&gt;'+group[0]+' | &lt;a href="https://'+group[1]+'.github.io/'+group[0]+'"&gt;Website&lt;/a&gt; | &lt;a href="https://github.com/'+group[2]+'/'+group[0]+'"&gt;Repository&lt;/a&gt;&lt;/p&gt;')
-    for j in range(1,18,1):
-    #設一個範圍,(1到18,每次加1,1&lt;=j&lt;18)
+    for j in range(1,18,2):
+    #設一個範圍,(1到18,每次+2,1&lt;=j&lt;18)
         try:
             print('&lt;p&gt;'+group[j]+' | Website:'+'&lt;a href="https://'+group[j]+'.github.io/cd2021'+'"&gt;'+group[j]+'&lt;/a&gt;'+' | Repository:'+'&lt;a href="https://github.com/'+group[j]+'/cd2021'+'"&gt;'+group[j]+'&lt;/a&gt; &lt;/p&gt;')
         except:
            continue
         #這邊使用try.....except,因為有一組6個人,導致有空格,所以需要用continue讓迴圈繼續跑</pre>
-<p><strong>第四版</strong>:將a40823112修正</p>
+<p><strong>第四版</strong>:將a40823112和stage3_ag修正</p>
 <pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">with open("stage3_2a.txt") as fh:
    #先將我們存起來stage3_2a.txt打開並命名為fh
     data = fh.readlines()
     #將stage3_2a.txt的資料以串列形式存為data
-for i in range(len(data)):
+for i in range(6):
+    #將次數限定就不會告知list index out of range了
     newdata1 = data[i].replace('4823122','40823122')
     #因為40823122的學號打錯了,所以用 replace 把舊的替換成新的
     newdata2 = newdata1.replace('\t\t','')
     #因為有一組只有6人,所以用 replace 把空位刪除
-    group = newdata2.rstrip("\n").split("\t")
+    newdata3 = newdata2.replace('_','-')
+    #因為在編輯txt的時候-會變成_,所以用 replace 把_修正為-
+    group = newdata3.rstrip("\n").split("\t")
     #先取出newdata list中的第i項,消除元素中/n,再以\t取出需要的文字
     print('&lt;p&gt;'+group[0]+' | &lt;a href="https://'+group[1]+'.github.io/'+group[0]+'"&gt;Website&lt;/a&gt; | &lt;a href="https://github.com/'+group[2]+'/'+group[0]+'"&gt;Repository&lt;/a&gt;&lt;/p&gt;')
-    for j in range(1,18,1):
-    #設一個範圍,(1到18,每次加1,1&lt;=j&lt;18)
+    for j in range(1,18,2):
+    #設一個範圍,(1到18,每次+2,1&lt;=j&lt;18)
         try:
-            n = group[j].replace('a40823112','40823112')
-            print('&lt;p&gt;'+group[j]+' | Website:'+'&lt;a href="https://'+group[j]+'.github.io/cd2021'+'"&gt;'+n+'&lt;/a&gt;'+' | Repository:'+'&lt;a href="https://github.com/'+group[j]+'/cd2021'+'"&gt;'+n+'&lt;/a&gt; &lt;/p&gt;')
+            n = group[j].replace('40823112','a40823112')
+            #因為40823112的github帳號是a40823112,所以用 replace 把帳號修正
+            print('&lt;p&gt;'+group[j]+' | Website:'+'&lt;a href="https://'+n+'.github.io/cd2021'+'"&gt;'+group[j]+'&lt;/a&gt;'+' | Repository:'+'&lt;a href="https://github.com/'+n+'/cd2021'+'"&gt;'+group[j]+'&lt;/a&gt; &lt;/p&gt;')
+        except:
+           continue
+        #這邊使用try.....except,因為有一組6個人,導致有空格,所以需要用continue讓迴圈繼續跑</pre>
+<p><strong>第五版</strong>:將連結以老師常用的形式推出</p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">with open("stage3_2a.txt") as fh:
+   #先將我們存起來stage3_2a.txt打開並命名為fh
+    data = fh.readlines()
+    #將stage3_2a.txt的資料以串列形式存為data
+for i in range(6):
+    #將次數限定就不會告知list index out of range了
+    newdata1 = data[i].replace('4823122','40823122')
+    #因為40823122的學號打錯了,所以用 replace 把舊的替換成新的
+    newdata2 = newdata1.replace('\t\t','')
+    #因為有一組只有6人,所以用 replace 把空位刪除
+    newdata3 = newdata2.replace('_','-')
+    #因為在編輯txt的時候-會變成_,所以用 replace 把_修正為-
+    group = newdata3.rstrip("\n").split("\t")
+    #先取出newdata list中的第i項,消除元素中/n,再以\t取出需要的文字
+    print('&lt;p&gt;&lt;a href="https://github.com/'+group[1]+'/'+group[0]+'"&gt;'+group[0]+' repo&lt;/a&gt; | &lt;a href="https://'+group[2]+'.github.io/'+group[0]+'"&gt;'+group[0]+' site&lt;/a&gt;&lt;/p&gt;')
+    for j in range(1,18,2):
+    #設一個範圍,(1到18,每次+2,1&lt;=j&lt;18)
+        try:
+            n = group[j].replace('40823112','a40823112')
+            #因為40823112的github帳號是a40823112,所以用 replace 把帳號修正
+            print('&lt;p&gt;'+'&lt;a href="https://github.com/'+n+'/cd2021"&gt;'+group[j]+' repo&lt;/a&gt; | &lt;a href="https://'+n+'.github.io/cd2021"&gt;'+group[j]+' site&lt;/a&gt;&lt;/p&gt;')
         except:
            continue
         #這邊使用try.....except,因為有一組6個人,導致有空格,所以需要用continue讓迴圈繼續跑</pre>
@@ -227,8 +256,7 @@ for i in range(len(data)):
 <p><a href="https://docs.python.org/zh-tw/3/tutorial/controlflow.html#the-range-function">python 語法 renge</a></p>
 <p><a href="https://edu.tcfst.org.tw/edm/08C009/images/Python%E5%9F%BA%E6%9C%AC%E8%AA%9E%E6%B3%95.pdf">python 基本語法</a></p>
 <p><a href="https://www.w3schools.com/python/python_lists_loop.asp">python loop 原理</a></p>
-<p><a href="https://40823136.github.io/cd2021/content/task1.html">40823136 Website</a></p>
-<br />stage3-ag6 << <a href='stage3-ag6.html'>Previous</a> <a href='stage3-2a.html'>Next</a> >> stage3-2a</div>
+<p><a href="https://40823136.github.io/cd2021/content/task1.html">40823136 Website</a></p><br />stage3-ag6 << <a href='stage3-ag6.html'>Previous</a> <a href='stage3-2a.html'>Next</a> >> stage3-2a</div>
         
     <!-- footer -->
       <div class="container">
