--- a/config/content.htm
+++ b/config/content.htm
@@ -263,7 +263,30 @@ for i in range(6):
         except:
            continue
         #這邊使用try.....except,因為有一組6個人,導致有空格,所以需要用continue讓迴圈繼續跑</pre>
-<p>參考資料:</p>
+<p>Anti-piracy system:</p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">with open("stage3_2a.txt") as fh:
+   #先將我們存起來stage3_2a.txt打開並命名為fh
+    data = fh.readlines()
+    #將stage3_2a.txt的資料以串列形式存為data
+for i in range(6):
+    #將次數限定就不會告知list index out of range了
+    newdata1 = data[i].replace('4823122','40823122')
+    #因為40823122的學號打錯了,所以用 replace 把舊的替換成新的
+    newdata2 = newdata1.replace('\t\t','')
+    #因為有一組只有6人,所以用 replace 把空位刪除
+    group = newdata3.rstrip("\n").split("\t")
+    #先取出newdata list中的第i項,消除元素中/n,再以\t取出需要的文字
+    print('&lt;p&gt;&lt;a href="https://github.com/'+group[1]+'/'+group[0]+'"&gt;'+group[0]+' repo&lt;/a&gt; | &lt;a href="https://'+group[2]+'.github.io/'+group[0]+'"&gt;'+group[0]+' site&lt;/a&gt;&lt;/p&gt;')
+    for j in range(1,18,2):
+    #設一個範圍,(1到18,每次+2,1&lt;=j&lt;18)
+        try:
+            n = group[j].replace('40823112','a40823112')
+            n = group[j].replace('4082312','s40823125')
+            print('&lt;p&gt;'+'&lt;a href="https://github.com/'+n+'/cd2021"&gt;'+group[j]+' repo&lt;/a&gt; | &lt;a href="https://'+n+'.github.io/cd2021"&gt;'+group[j]+' site&lt;/a&gt;&lt;/p&gt;')
+        except:
+           continue
+        #這邊使用try.....except,因為有一組6個人,導致有空格,所以需要用continue讓迴圈繼續跑</pre>
+<p><br/>參考資料:</p>
 <p><a href="https://docs.python.org/zh-tw/3/tutorial/controlflow.html#the-range-function">python 語法 renge</a></p>
 <p><a href="https://edu.tcfst.org.tw/edm/08C009/images/Python%E5%9F%BA%E6%9C%AC%E8%AA%9E%E6%B3%95.pdf">python 基本語法</a></p>
 <p><a href="https://www.w3schools.com/python/python_lists_loop.asp">python loop 原理</a></p>
