--- a/content/task 1.html
+++ b/content/task 1.html
@@ -270,7 +270,7 @@ for i in range(6):
     #設一個範圍,(1到18,每次+2,1&lt;=j&lt;18)
         try:
             n = group[j].replace('40823112','a40823112')
-            n = group[j].replace('4082312','s40823125')
+            n = group[j].replace('4082312','40823125')
             print('&lt;p&gt;'+'&lt;a href="https://github.com/'+n+'/cd2021"&gt;'+group[j]+' repo&lt;/a&gt; | &lt;a href="https://'+n+'.github.io/cd2021"&gt;'+group[j]+' site&lt;/a&gt;&lt;/p&gt;')
         except:
            continue
