--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -281,7 +281,7 @@ for i in range(6):
     #設一個範圍,(1到18,每次+2,1&lt;=j&lt;18)
         try:
             n = group[j].replace('40823112','a40823112')
-            n = group[j].replace('4082312','s40823125')
+            n = group[j].replace('4082312','40823125')
             print('&lt;p&gt;'+'&lt;a href="https://github.com/'+n+'/cd2021"&gt;'+group[j]+' repo&lt;/a&gt; | &lt;a href="https://'+n+'.github.io/cd2021"&gt;'+group[j]+' site&lt;/a&gt;&lt;/p&gt;')
         except:
            continue
@@ -290,7 +290,8 @@ for i in range(6):
 <p><a href="https://docs.python.org/zh-tw/3/tutorial/controlflow.html#the-range-function">python 語法 renge</a></p>
 <p><a href="https://edu.tcfst.org.tw/edm/08C009/images/Python%E5%9F%BA%E6%9C%AC%E8%AA%9E%E6%B3%95.pdf">python 基本語法</a></p>
 <p><a href="https://www.w3schools.com/python/python_lists_loop.asp">python loop 原理</a></p>
-<p><a href="https://40823136.github.io/cd2021/content/task1.html">40823136 Website</a></p><h3>stage3-2a</h3>
+<p><a href="https://40823136.github.io/cd2021/content/task1.html">40823136 Website</a></p>
+<h3>stage3-2a</h3>
 <p><a href="https://github.com/40823131/stage3-ag1">stage3-ag1 repo</a> | <a href="https://40823131.github.io/stage3-ag1">stage3-ag1 site</a></p>
 <p><a href="https://github.com/40823131/cd2021">40823131 repo</a> | <a href="https://40823131.github.io/cd2021">40823131 site</a></p>
 <p><a href="https://github.com/a40823112/cd2021">40823112 repo</a> | <a href="https://a40823112.github.io/cd2021">40823112 site</a></p>
@@ -342,10 +343,12 @@ for i in range(6):
 <p><a href="https://github.com/40823117/cd2021">40823117 repo</a> | <a href="https://40823117.github.io/cd2021">40823117 site</a></p>
 <p><a href="https://github.com/40823129/cd2021">40823129 repo</a> | <a href="https://40823129.github.io/cd2021">40823129 site</a></p>
 <p><a href="https://github.com/40823149/cd2021">40823149 repo</a> | <a href="https://40823149.github.io/cd2021">40823149 site</a></p>
-<p><a href="https://github.com/40823153/cd2021">40823153 repo</a> | <a href="https://40823153.github.io/cd2021">40823153 site</a></p><h2>task 2</h2>
+<p><a href="https://github.com/40823153/cd2021">40823153 repo</a> | <a href="https://40823153.github.io/cd2021">40823153 site</a></p>
+<h2>task 2</h2>
 <p>remote API 操作測試</p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/WUDqe6oSfwo" width="560"></iframe></p>
-<p>目前在用2W1a.ttt時沒辦法使用老師給的內部IP 192.168.192.1+組別+排序別,進行連線</p><h1>Error exclude</h1>
+<p>目前在用2W1a.ttt時沒辦法使用老師給的內部IP 192.168.192.1+組別+排序別,進行連線</p>
+<h1>Error exclude</h1>
 <h2>協同失誤</h2>
 <p>在協同時因為組員們的倉儲版本不同導致無法推送</p>
 <p><img alt="" height="113" src="https://localhost:8444/images/%E8%9E%A2%E5%B9%95%E6%93%B7%E5%8F%96%E7%95%AB%E9%9D%A2%202021-04-13%20194559.jpg" width="500"/></p>
@@ -443,5 +446,6 @@ for i in range(6):
 <p><strong>2.4.3</strong></p>
 <p>擊球桿新增後轉功能，可以有效控制擊球的時機。</p>
 <p><iframe allowfullscreen="allowfullscreen" data-mce-fragment="1" height="314" src="https://www.youtube.com/embed/R4FlyPlJxqw" width="560"></iframe></p>
+<h1>ssh 教學</h1>
 </div>
 </div>
