--- a/config/content.htm
+++ b/config/content.htm
@@ -290,7 +290,8 @@ for i in range(6):
 <p><a href="https://docs.python.org/zh-tw/3/tutorial/controlflow.html#the-range-function">python 語法 renge</a></p>
 <p><a href="https://edu.tcfst.org.tw/edm/08C009/images/Python%E5%9F%BA%E6%9C%AC%E8%AA%9E%E6%B3%95.pdf">python 基本語法</a></p>
 <p><a href="https://www.w3schools.com/python/python_lists_loop.asp">python loop 原理</a></p>
-<p><a href="https://40823136.github.io/cd2021/content/task1.html">40823136 Website</a></p><h3>stage3-2a</h3>
+<p><a href="https://40823136.github.io/cd2021/content/task1.html">40823136 Website</a></p>
+<h3>stage3-2a</h3>
 <p><a href="https://github.com/40823131/stage3-ag1">stage3-ag1 repo</a> | <a href="https://40823131.github.io/stage3-ag1">stage3-ag1 site</a></p>
 <p><a href="https://github.com/40823131/cd2021">40823131 repo</a> | <a href="https://40823131.github.io/cd2021">40823131 site</a></p>
 <p><a href="https://github.com/a40823112/cd2021">40823112 repo</a> | <a href="https://a40823112.github.io/cd2021">40823112 site</a></p>
@@ -342,10 +343,12 @@ for i in range(6):
 <p><a href="https://github.com/40823117/cd2021">40823117 repo</a> | <a href="https://40823117.github.io/cd2021">40823117 site</a></p>
 <p><a href="https://github.com/40823129/cd2021">40823129 repo</a> | <a href="https://40823129.github.io/cd2021">40823129 site</a></p>
 <p><a href="https://github.com/40823149/cd2021">40823149 repo</a> | <a href="https://40823149.github.io/cd2021">40823149 site</a></p>
-<p><a href="https://github.com/40823153/cd2021">40823153 repo</a> | <a href="https://40823153.github.io/cd2021">40823153 site</a></p><h2>task 2</h2>
+<p><a href="https://github.com/40823153/cd2021">40823153 repo</a> | <a href="https://40823153.github.io/cd2021">40823153 site</a></p>
+<h2>task 2</h2>
 <p>remote API 操作測試</p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/WUDqe6oSfwo" width="560"></iframe></p>
-<p>目前在用2W1a.ttt時沒辦法使用老師給的內部IP 192.168.192.1+組別+排序別,進行連線</p><h1>Error exclude</h1>
+<p>目前在用2W1a.ttt時沒辦法使用老師給的內部IP 192.168.192.1+組別+排序別,進行連線</p>
+<h1>Error exclude</h1>
 <h2>協同失誤</h2>
 <p>在協同時因為組員們的倉儲版本不同導致無法推送</p>
 <p><img alt="" height="113" src="https://localhost:8444/images/%E8%9E%A2%E5%B9%95%E6%93%B7%E5%8F%96%E7%95%AB%E9%9D%A2%202021-04-13%20194559.jpg" width="500"/></p>
@@ -443,5 +446,114 @@ for i in range(6):
 <p><strong>2.4.3</strong></p>
 <p>擊球桿新增後轉功能，可以有效控制擊球的時機。</p>
 <p><iframe allowfullscreen="allowfullscreen" data-mce-fragment="1" height="314" src="https://www.youtube.com/embed/R4FlyPlJxqw" width="560"></iframe></p>
+<h1>ssh</h1>
+<h4>ssh建立:</h4>
+<p>建立公鑰(public key)</p>
+<div>
+<div class="syntaxhighlighter html" id="highlighter_690020">
+<table border="0" cellpadding="0" cellspacing="0">
+<tbody>
+<tr>
+<td class="gutter">
+<div class="line number1 index0 alt2">1</div>
+</td>
+<td class="code">
+<div class="container">
+<div class="line number1 index0 alt2"><code class="html plain">打exit可以離開sh模式</code></div>
+</div>
+</td>
+</tr>
+</tbody>
+</table>
 </div>
 </div>
+<p><img alt="" height="184" src="https://40823125.github.io/cad2020/images/螢幕擷取畫面 2020-09-27 200842.png" width="350"/></p>
+<p>設定儲存路徑</p>
+<div>
+<div class="syntaxhighlighter html" id="highlighter_190135">
+<table border="0" cellpadding="0" cellspacing="0">
+<tbody>
+<tr>
+<td class="gutter">
+<div class="line number1 index0 alt2">1</div>
+</td>
+<td class="code">
+<div class="container">
+<div class="line number1 index0 alt2"><code class="html plain">/y(目錄名)/home(資料夾名稱)/.ssh(創建的資料夾名稱)/40823125(創建的檔案名)</code></div>
+</div>
+</td>
+</tr>
+</tbody>
+</table>
+</div>
+</div>
+<p><img alt="" height="183" src="https://40823125.github.io/cad2020/images/螢幕擷取畫面 2020-09-27 201119.png" width="350"/></p>
+<p>載入</p>
+<p><img alt="" height="321" src="https://40823125.github.io/cad2020/images/螢幕擷取畫面 2020-09-27 201515.png" width="350"/></p>
+<p><img alt="" height="217" src="https://40823125.github.io/cad2020/images/螢幕擷取畫面 2020-09-27 201601.png" width="350"/></p>
+<p>創建密鑰(private key)(ppk檔)</p>
+<p><img alt="" height="315" src="https://40823125.github.io/cad2020/images/螢幕擷取畫面 2020-09-27 201704.png" width="350"/></p>
+<p>設定github ssh key</p>
+<p><img alt="" height="239" src="https://40823125.github.io/cad2020/images/螢幕擷取畫面 2020-09-27 201750.png" width="350"/></p>
+<p><img alt="" height="188" src="https://40823125.github.io/cad2020/images/螢幕擷取畫面 2020-09-27 201954.png" width="350"/></p>
+<p>設定putty</p>
+<p><img alt="" height="246" src="https://40823125.github.io/cad2020/images/螢幕擷取畫面 2020-09-27 203300.png" width="350"/></p>
+<p><img alt="" height="316" src="https://40823125.github.io/cad2020/images/螢幕擷取畫面 2021-01-14 230801.png" width="350"/></p>
+<p><img alt="" height="315" src="https://40823125.github.io/cad2020/images/螢幕擷取畫面 2021-01-14 230817.png" width="350"/></p>
+<p>加入到.ssh中取名為config</p>
+<div>
+<div class="syntaxhighlighter py" id="highlighter_775556">
+<table border="0" cellpadding="0" cellspacing="0">
+<tbody>
+<tr>
+<td class="gutter">
+<div class="line number1 index0 alt2">1</div>
+<div class="line number2 index1 alt1">2</div>
+<div class="line number3 index2 alt2">3</div>
+<div class="line number4 index3 alt1">4</div>
+<div class="line number5 index4 alt2">5</div>
+<div class="line number6 index5 alt1">6</div>
+<div class="line number7 index6 alt2">7</div>
+<div class="line number8 index7 alt1">8</div>
+<div class="line number9 index8 alt2">9</div>
+</td>
+<td class="code">
+<div class="container">
+<div class="line number1 index0 alt2"><code class="py plain">ProxyCommand y:</code><code class="py keyword">/</code><code class="py plain">putty</code><code class="py keyword">/</code><code class="py plain">plink.exe github.com </code><code class="py keyword">%</code><code class="py plain">h </code><code class="py keyword">%</code><code class="py plain">p</code></div>
+<div class="line number2 index1 alt1"><code class="py spaces"> </code> </div>
+<div class="line number3 index2 alt2"><code class="py plain">Host github.com</code></div>
+<div class="line number4 index3 alt1"><code class="py spaces">    </code><code class="py plain">User git</code></div>
+<div class="line number5 index4 alt2"><code class="py spaces">    </code><code class="py plain">Port </code><code class="py value">22</code></div>
+<div class="line number6 index5 alt1"><code class="py spaces">    </code><code class="py plain">Hostname github.com</code></div>
+<div class="line number7 index6 alt2"><code class="py spaces"> </code> </div>
+<div class="line number8 index7 alt1"><code class="py spaces">    </code><code class="py plain">TCPKeepAlive yes</code></div>
+<div class="line number9 index8 alt2"><code class="py spaces">    </code><code class="py plain">IdentitiesOnly yes</code></div>
+</div>
+</td>
+</tr>
+</tbody>
+</table>
+</div>
+</div>
+<p>將cad2020中.git目錄下的config改為</p>
+<div>
+<div class="syntaxhighlighter html" id="highlighter_293516">
+<table border="0" cellpadding="0" cellspacing="0">
+<tbody>
+<tr>
+<td class="gutter">
+<div class="line number1 index0 alt2">1</div>
+<div class="line number2 index1 alt1">2</div>
+</td>
+<td class="code">
+<div class="container">
+<div class="line number1 index0 alt2"><code class="html plain">#url = https://github.com/40823125/cad2020.git</code></div>
+<div class="line number2 index1 alt1"><code class="html spaces">    </code><code class="html plain">url = git@github.com:40823125/cad2020.git</code></div>
+</div>
+</td>
+</tr>
+</tbody>
+</table>
+</div>
+</div>
+<p></p></div></div>
