--- a/config/content.htm
+++ b/config/content.htm
@@ -1,4 +1,8 @@
-<h1>Stage1-ag14</h1>
+<h1>個人簡介</h1>
+<p>四設計二甲 40823125 楊子賢</p>
+<p><a href="https://github.com/40823125/cd2021" title="cd2021"><img caption="false" height="85" src="/get_page/images/github-social.png" width="400"/></a></p>
+<p><a href="https://gitter.im/home" title="gitter"><img caption="false" height="85" src="/get_page/images/images.png" width="400"/></a></p>
+<p><a href="https://www.youtube.com/channel/UCAAFSB7_5yZVKj76pFEoVEw" title="youtube"><img alt="" height="125" src="/get_page/images/索引.png" width="400"/></a></p><h1>Stage1-ag14</h1>
 <p><a href="https://40823125.github.io/stage1-ag14/content/index.html">stage1-ag14</a></p>
 <h2>W1</h2>
 <p>1.建立倉儲</p>
@@ -556,4 +560,6 @@ for i in range(6):
 </table>
 </div>
 </div>
-<p></p></div></div>
+<p></p>
+</div>
+</div>
