--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -1,4 +1,6 @@
-<h1>Stage1-ag14</h1>
+<h1>個人簡介</h1>
+<p>四設計二甲 40823125 楊子賢</p>
+<p><a href="https://github.com/40823125/cd2021" title="cd2021"><img caption="false" height="85" src="/get_page/images/github-social.png" width="400"/></a></p><h1>Stage1-ag14</h1>
 <p><a href="https://40823125.github.io/stage1-ag14/content/index.html">stage1-ag14</a></p>
 <h2>W1</h2>
 <p>1.建立倉儲</p>
@@ -446,6 +448,116 @@ for i in range(6):
 <p><strong>2.4.3</strong></p>
 <p>擊球桿新增後轉功能，可以有效控制擊球的時機。</p>
 <p><iframe allowfullscreen="allowfullscreen" data-mce-fragment="1" height="314" src="https://www.youtube.com/embed/R4FlyPlJxqw" width="560"></iframe></p>
-<h1>ssh 教學</h1>
+<h1>ssh</h1>
+<h4>ssh建立:</h4>
+<p>建立公鑰(public key)</p>
+<div>
+<div class="syntaxhighlighter html" id="highlighter_690020">
+<table border="0" cellpadding="0" cellspacing="0">
+<tbody>
+<tr>
+<td class="gutter">
+<div class="line number1 index0 alt2">1</div>
+</td>
+<td class="code">
+<div class="container">
+<div class="line number1 index0 alt2"><code class="html plain">打exit可以離開sh模式</code></div>
+</div>
+</td>
+</tr>
+</tbody>
+</table>
+</div>
+</div>
+<p><img alt="" height="184" src="https://40823125.github.io/cad2020/images/螢幕擷取畫面 2020-09-27 200842.png" width="350"/></p>
+<p>設定儲存路徑</p>
+<div>
+<div class="syntaxhighlighter html" id="highlighter_190135">
+<table border="0" cellpadding="0" cellspacing="0">
+<tbody>
+<tr>
+<td class="gutter">
+<div class="line number1 index0 alt2">1</div>
+</td>
+<td class="code">
+<div class="container">
+<div class="line number1 index0 alt2"><code class="html plain">/y(目錄名)/home(資料夾名稱)/.ssh(創建的資料夾名稱)/40823125(創建的檔案名)</code></div>
+</div>
+</td>
+</tr>
+</tbody>
+</table>
+</div>
+</div>
+<p><img alt="" height="183" src="https://40823125.github.io/cad2020/images/螢幕擷取畫面 2020-09-27 201119.png" width="350"/></p>
+<p>載入</p>
+<p><img alt="" height="321" src="https://40823125.github.io/cad2020/images/螢幕擷取畫面 2020-09-27 201515.png" width="350"/></p>
+<p><img alt="" height="217" src="https://40823125.github.io/cad2020/images/螢幕擷取畫面 2020-09-27 201601.png" width="350"/></p>
+<p>創建密鑰(private key)(ppk檔)</p>
+<p><img alt="" height="315" src="https://40823125.github.io/cad2020/images/螢幕擷取畫面 2020-09-27 201704.png" width="350"/></p>
+<p>設定github ssh key</p>
+<p><img alt="" height="239" src="https://40823125.github.io/cad2020/images/螢幕擷取畫面 2020-09-27 201750.png" width="350"/></p>
+<p><img alt="" height="188" src="https://40823125.github.io/cad2020/images/螢幕擷取畫面 2020-09-27 201954.png" width="350"/></p>
+<p>設定putty</p>
+<p><img alt="" height="246" src="https://40823125.github.io/cad2020/images/螢幕擷取畫面 2020-09-27 203300.png" width="350"/></p>
+<p><img alt="" height="316" src="https://40823125.github.io/cad2020/images/螢幕擷取畫面 2021-01-14 230801.png" width="350"/></p>
+<p><img alt="" height="315" src="https://40823125.github.io/cad2020/images/螢幕擷取畫面 2021-01-14 230817.png" width="350"/></p>
+<p>加入到.ssh中取名為config</p>
+<div>
+<div class="syntaxhighlighter py" id="highlighter_775556">
+<table border="0" cellpadding="0" cellspacing="0">
+<tbody>
+<tr>
+<td class="gutter">
+<div class="line number1 index0 alt2">1</div>
+<div class="line number2 index1 alt1">2</div>
+<div class="line number3 index2 alt2">3</div>
+<div class="line number4 index3 alt1">4</div>
+<div class="line number5 index4 alt2">5</div>
+<div class="line number6 index5 alt1">6</div>
+<div class="line number7 index6 alt2">7</div>
+<div class="line number8 index7 alt1">8</div>
+<div class="line number9 index8 alt2">9</div>
+</td>
+<td class="code">
+<div class="container">
+<div class="line number1 index0 alt2"><code class="py plain">ProxyCommand y:</code><code class="py keyword">/</code><code class="py plain">putty</code><code class="py keyword">/</code><code class="py plain">plink.exe github.com </code><code class="py keyword">%</code><code class="py plain">h </code><code class="py keyword">%</code><code class="py plain">p</code></div>
+<div class="line number2 index1 alt1"><code class="py spaces"> </code> </div>
+<div class="line number3 index2 alt2"><code class="py plain">Host github.com</code></div>
+<div class="line number4 index3 alt1"><code class="py spaces">    </code><code class="py plain">User git</code></div>
+<div class="line number5 index4 alt2"><code class="py spaces">    </code><code class="py plain">Port </code><code class="py value">22</code></div>
+<div class="line number6 index5 alt1"><code class="py spaces">    </code><code class="py plain">Hostname github.com</code></div>
+<div class="line number7 index6 alt2"><code class="py spaces"> </code> </div>
+<div class="line number8 index7 alt1"><code class="py spaces">    </code><code class="py plain">TCPKeepAlive yes</code></div>
+<div class="line number9 index8 alt2"><code class="py spaces">    </code><code class="py plain">IdentitiesOnly yes</code></div>
+</div>
+</td>
+</tr>
+</tbody>
+</table>
+</div>
+</div>
+<p>將cad2020中.git目錄下的config改為</p>
+<div>
+<div class="syntaxhighlighter html" id="highlighter_293516">
+<table border="0" cellpadding="0" cellspacing="0">
+<tbody>
+<tr>
+<td class="gutter">
+<div class="line number1 index0 alt2">1</div>
+<div class="line number2 index1 alt1">2</div>
+</td>
+<td class="code">
+<div class="container">
+<div class="line number1 index0 alt2"><code class="html plain">#url = https://github.com/40823125/cad2020.git</code></div>
+<div class="line number2 index1 alt1"><code class="html spaces">    </code><code class="html plain">url = git@github.com:40823125/cad2020.git</code></div>
+</div>
+</td>
+</tr>
+</tbody>
+</table>
+</div>
+</div>
+<p></p>
 </div>
 </div>
