--- a/config/content.htm
+++ b/config/content.htm
@@ -1,10 +1,15 @@
 <h1>個人簡介</h1>
 <p>四設計二甲 40823125 楊子賢</p>
-<p><a href="https://github.com/40823125/cd2021" title="cd2021"><img caption="false" height="85" src="/get_page/images/github-social.png" width="400"/></a></p>
-<p><a href="https://gitter.im/home" title="gitter"><img caption="false" height="85" src="/get_page/images/images.png" width="400"/></a></p>
-<p><a href="https://www.youtube.com/channel/UCAAFSB7_5yZVKj76pFEoVEw" title="youtube"><img alt="" height="125" src="/get_page/images/索引.png" width="400"/></a></p><h1>Stage1-ag14</h1>
-<p><a href="https://40823125.github.io/stage1-ag14/content/index.html">stage1-ag14</a></p>
-<h2>W1</h2>
+<p><strong>github</strong>:</p>
+<p><a href="https://github.com/40823125/cd2021" title="cd2021"><img caption="false" height="267" src="/images/microsoftgithublove.0-1.jpg" width="400"/></a></p>
+<p><strong>gitter</strong>:</p>
+<p><a href="https://gitter.im/home" title="gitter"><img caption="false" height="400" src="/images/unnamed.jpg" width="400"/></a></p>
+<p><strong>youtube</strong>:</p>
+<p><a href="https://www.youtube.com/channel/UCAAFSB7_5yZVKj76pFEoVEw"><img alt="" height="200" src="/images/youtube_logo_dark.jpg" width="400"/></a></p><h1>Stage1-ag14</h1>
+<p><strong>倉儲</strong>:</p>
+<p><a href="https://github.com/40823125/stage1-ag14"><img alt="" height="210" src="/images/github-mark.png" width="400"/><span></span></a> </p>
+<p><strong>網站</strong>:</p>
+<p><a href="https://40823125.github.io/stage1-ag14/content/index.html"><img alt="" height="175" src="/images/refine_facebook-1200x630.png" width="400"/></a></p><h2>W1</h2>
 <p>1.建立倉儲</p>
 <p>2.尋找組員:</p>
 <p>40823125<span> </span><a href="https://github.com/40823125/cd2021">倉儲</a><span> </span><a href="https://40823125.github.io/cd2021/">網頁</a></p>
@@ -47,13 +52,14 @@
 <h3>PDF</h3>
 <p><a href="/downloads/2021-協同產品設計實習-stage1-ag14.pdf">2021-協同產品設計實習-stage1-ag14.pdf</a></p>
 <h1>Stage2-ag12</h1>
-<p><a href="https://40823125.github.io/stage2-ag12/content/index.html">stage2-ag12</a></p>
+<p><strong>倉儲</strong>:</p>
+<p><a href="https://github.com/40823125/stage2-ag12"><img alt="" height="210" src="/images/github-mark.png" width="400"/><span></span></a> </p>
+<p><strong>網站</strong>:</p>
+<p><a href="https://40823125.github.io/stage2-ag12/content/index.html"><img alt="" height="210" src="/images/social.jpg" width="400"/></a></p>
 <p>組員</p>
 <p><span><span> </span></span><a href="http://github.com/40823152/cd2021">40823152 repo</a><span><span> </span>|<span> </span></span><a href="http://40823152.github.io/cd2021">40823152 site</a><span><span> </span>|</span></p>
 <p><span><span> </span></span><a href="http://github.com/40823153/cd2021">40823153 repo</a><span><span> </span>|<span> </span></span><a href="http://40823153.github.io/cd2021">40823153 site</a><span><span> </span>|</span></p>
-<p><span><span> </span></span><a href="http://github.com/40823125/cd2021">40823125 repo</a><span><span> </span>|<span> </span></span><a href="http://40823125.github.io/cd2021">40823125 site</a><span><span> </span>|</span></p>
-<p><span><span> </span></span><a href="http://github.com/40823110/cd2021">40823110 repo</a><span><span> </span>|<span> </span></span><a href="http://40823110.github.io/cd2021">40823110 site</a> |</p>
-<h2>W5</h2>
+<p><span><span> </span></span><a href="http://github.com/40823110/cd2021">40823110 repo</a><span><span> </span>|<span> </span></span><a href="http://40823110.github.io/cd2021">40823110 site</a> |</p><h2>W5</h2>
 <p><img alt="" height="803" src="/images/Screenshot 2021-04-15 155510.png" width="600"/></p>
 <h3>產品目標</h3>
 <p>主題:籃球機 二代</p>
@@ -138,17 +144,18 @@
 <p><strong>協同報告</strong></p>
 <p><a href="https://40823153.github.io/stage2-ag12/downloads/2021-協同產品設計實習-stage2-ag12.pdf">2021-協同產品設計實習-stage2-ag12.pdf</a></p>
 <h1>stage3-ag6</h1>
-<p><a href="https://40823125.github.io/stage3-ag6">stage3-ag6 repo<span></span></a> | <a href="https://40823125.github.io/stage3-ag6/content/index.html">stage3-ag6 site</a><span> </span>|</p>
+<p><strong>倉儲</strong>:</p>
+<p><a href="https://github.com/40823125/stage3-ag6"><img alt="" height="210" src="/images/github-mark.png" width="400"/><span></span></a> </p>
+<p><strong>網頁</strong>:</p>
+<p><a href="https://40823125.github.io/stage3-ag6/content/index.html"><img alt="" height="153" src="/images/what-is-github-and-what-is-it-used-for-1.png" width="400"/></a><span></span></p>
 <p>組長:<a href="https://github.com/40823152/cd2021">40823152 repo</a><span> | </span><a href="https://40823152.github.io/cd2021/content/index.html">40823152 site</a><span> |</span></p>
 <p>組員:</p>
 <p><a href="https://github.com/40823110/cd2021">40823110 repo</a><span> | </span><a href="https://40823110.github.io/cd2021/content/index.html">40823110 site</a><span> </span>|</p>
-<p><span><span></span></span><a href="https://github.com/40823125/cd2021">40823125 repo</a><span>|<span> </span></span><a href="https://40823125.github.io/cd2021/content/index.html">40823125 site</a><span><span> </span>|</span></p>
 <p><span></span><a href="https://github.com/40823153/cd2021">40823153 repo</a><span><span> </span>|<span> </span></span><a href="https://40823153.github.io/cd2021/content/index.html">40823153 site</a><span><a href="https://40823153.github.io/cd2021/content/index.html"><span> </span></a>|</span></p>
 <p><span><a href="https://github.com/40823117/cd2021">40823117 repo<span> </span></a>|<span> </span><a href="https://40823117.github.io/cd2021/content/index.html">40823117 site</a><span> </span>|</span></p>
 <p><span><a href="https://github.com/40823122/cd2021">40823122 repo<span> </span></a>|<span> </span><a href="https://40823122.github.io/cd2021/content/index.html">40823122 site</a><span> </span>|</span></p>
 <p><span><a href="https://github.com/40823129/cd2021">40823129 repo<span> </span></a>|<span> </span><a href="https://40823129.github.io/cd2021/content/index.html">40823129 site</a><span> </span>|</span></p>
-<p><span><a href="https://github.com/40823149/cd2021">40823149 repo<span> </span></a>|<span> </span><a href="https://40823149.github.io/cd2021/content/index.html">40823149 site<span> </span></a>|</span></p>
-<h2>task 1</h2>
+<p><span><a href="https://github.com/40823149/cd2021">40823149 repo<span> </span></a>|<span> </span><a href="https://40823149.github.io/cd2021/content/index.html">40823149 site<span> </span></a>|</span></p><h2>task 1</h2>
 <p>讀取 <a href="https://drive.google.com/file/d/1HETcW6z9bweibVH37jiziNbT71E8dgVU/view?usp=sharing">stage3_2a.txt</a>, 建立 Stage3 的分組倉儲, 分組網頁, 以及各組員倉儲及網頁連結.</p>
 <p><strong>老師的範例</strong>:</p>
 <pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false"># open file, default is read mode, since txt content no chinese char
