--- a/content/index.html
+++ b/content/index.html
@@ -135,9 +135,12 @@ img.add_border {
         </header>
     <div id="tipue_search_content"> <a href='Stage1-ag14.html'>Next</a> >> Stage1-ag14<br /><h1>個人簡介</h1>
 <p>四設計二甲 40823125 楊子賢</p>
-<p><a href="https://github.com/40823125/cd2021" title="cd2021"><img caption="false" height="85" src="/get_page/images/github-social.png" width="400"/></a></p>
-<p><a href="https://gitter.im/home" title="gitter"><img caption="false" height="85" src="/get_page/images/images.png" width="400"/></a></p>
-<p><a href="https://www.youtube.com/channel/UCAAFSB7_5yZVKj76pFEoVEw" title="youtube"><img alt="" height="125" src="/get_page/images/索引.png" width="400"/></a></p><br /> <a href='Stage1-ag14.html'>Next</a> >> Stage1-ag14</div>
+<p><strong>github</strong>:</p>
+<p><a href="https://github.com/40823125/cd2021" title="cd2021"><img caption="false" height="267" src="./../images/microsoftgithublove.0-1.jpg" width="400"/></a></p>
+<p><strong>gitter</strong>:</p>
+<p><a href="https://gitter.im/home" title="gitter"><img caption="false" height="400" src="./../images/unnamed.jpg" width="400"/></a></p>
+<p><strong>youtube</strong>:</p>
+<p><a href="https://www.youtube.com/channel/UCAAFSB7_5yZVKj76pFEoVEw"><img alt="" height="200" src="./../images/youtube_logo_dark.jpg" width="400"/></a></p><br /> <a href='Stage1-ag14.html'>Next</a> >> Stage1-ag14</div>
         
     <!-- footer -->
       <div class="container">
