--- a/content/Stage1-ag14.html
+++ b/content/Stage1-ag14.html
@@ -134,8 +134,10 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">個人簡介 << <a href='個人簡介.html'>Previous</a> <a href='W1.html'>Next</a> >> W1<br /><h1>Stage1-ag14</h1>
-<p><a href="https://40823125.github.io/stage1-ag14/content/index.html">stage1-ag14</a></p>
-<br />個人簡介 << <a href='個人簡介.html'>Previous</a> <a href='W1.html'>Next</a> >> W1</div>
+<p><strong>倉儲</strong>:</p>
+<p><a href="https://github.com/40823125/stage1-ag14"><img alt="" height="210" src="./../images/github-mark.png" width="400"/><span></span></a> </p>
+<p><strong>網站</strong>:</p>
+<p><a href="https://40823125.github.io/stage1-ag14/content/index.html"><img alt="" height="175" src="./../images/refine_facebook-1200x630.png" width="400"/></a></p><br />個人簡介 << <a href='個人簡介.html'>Previous</a> <a href='W1.html'>Next</a> >> W1</div>
         
     <!-- footer -->
       <div class="container">
