--- a/content/stage2-ag12.html
+++ b/content/stage2-ag12.html
@@ -134,13 +134,14 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">PDF << <a href='PDF.html'>Previous</a> <a href='W5.html'>Next</a> >> W5<br /><h1>Stage2-ag12</h1>
-<p><a href="https://40823125.github.io/stage2-ag12/content/index.html">stage2-ag12</a></p>
+<p><strong>倉儲</strong>:</p>
+<p><a href="https://github.com/40823125/stage2-ag12"><img alt="" height="210" src="./../images/github-mark.png" width="400"/><span></span></a> </p>
+<p><strong>網站</strong>:</p>
+<p><a href="https://40823125.github.io/stage2-ag12/content/index.html"><img alt="" height="210" src="./../images/social.jpg" width="400"/></a></p>
 <p>組員</p>
 <p><span><span> </span></span><a href="http://github.com/40823152/cd2021">40823152 repo</a><span><span> </span>|<span> </span></span><a href="http://40823152.github.io/cd2021">40823152 site</a><span><span> </span>|</span></p>
 <p><span><span> </span></span><a href="http://github.com/40823153/cd2021">40823153 repo</a><span><span> </span>|<span> </span></span><a href="http://40823153.github.io/cd2021">40823153 site</a><span><span> </span>|</span></p>
-<p><span><span> </span></span><a href="http://github.com/40823125/cd2021">40823125 repo</a><span><span> </span>|<span> </span></span><a href="http://40823125.github.io/cd2021">40823125 site</a><span><span> </span>|</span></p>
-<p><span><span> </span></span><a href="http://github.com/40823110/cd2021">40823110 repo</a><span><span> </span>|<span> </span></span><a href="http://40823110.github.io/cd2021">40823110 site</a> |</p>
-<br />PDF << <a href='PDF.html'>Previous</a> <a href='W5.html'>Next</a> >> W5</div>
+<p><span><span> </span></span><a href="http://github.com/40823110/cd2021">40823110 repo</a><span><span> </span>|<span> </span></span><a href="http://40823110.github.io/cd2021">40823110 site</a> |</p><br />PDF << <a href='PDF.html'>Previous</a> <a href='W5.html'>Next</a> >> W5</div>
         
     <!-- footer -->
       <div class="container">
