--- a/content/stage3-ag6.html
+++ b/content/stage3-ag6.html
@@ -134,17 +134,18 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">W9 << <a href='W9.html'>Previous</a> <a href='task 1.html'>Next</a> >> task 1<br /><h1>stage3-ag6</h1>
-<p><a href="https://40823125.github.io/stage3-ag6">stage3-ag6 repo<span></span></a> | <a href="https://40823125.github.io/stage3-ag6/content/index.html">stage3-ag6 site</a><span> </span>|</p>
+<p><strong>倉儲</strong>:</p>
+<p><a href="https://github.com/40823125/stage3-ag6"><img alt="" height="210" src="./../images/github-mark.png" width="400"/><span></span></a> </p>
+<p><strong>網頁</strong>:</p>
+<p><a href="https://40823125.github.io/stage3-ag6/content/index.html"><img alt="" height="153" src="./../images/what-is-github-and-what-is-it-used-for-1.png" width="400"/></a><span></span></p>
 <p>組長:<a href="https://github.com/40823152/cd2021">40823152 repo</a><span> | </span><a href="https://40823152.github.io/cd2021/content/index.html">40823152 site</a><span> |</span></p>
 <p>組員:</p>
 <p><a href="https://github.com/40823110/cd2021">40823110 repo</a><span> | </span><a href="https://40823110.github.io/cd2021/content/index.html">40823110 site</a><span> </span>|</p>
-<p><span><span></span></span><a href="https://github.com/40823125/cd2021">40823125 repo</a><span>|<span> </span></span><a href="https://40823125.github.io/cd2021/content/index.html">40823125 site</a><span><span> </span>|</span></p>
 <p><span></span><a href="https://github.com/40823153/cd2021">40823153 repo</a><span><span> </span>|<span> </span></span><a href="https://40823153.github.io/cd2021/content/index.html">40823153 site</a><span><a href="https://40823153.github.io/cd2021/content/index.html"><span> </span></a>|</span></p>
 <p><span><a href="https://github.com/40823117/cd2021">40823117 repo<span> </span></a>|<span> </span><a href="https://40823117.github.io/cd2021/content/index.html">40823117 site</a><span> </span>|</span></p>
 <p><span><a href="https://github.com/40823122/cd2021">40823122 repo<span> </span></a>|<span> </span><a href="https://40823122.github.io/cd2021/content/index.html">40823122 site</a><span> </span>|</span></p>
 <p><span><a href="https://github.com/40823129/cd2021">40823129 repo<span> </span></a>|<span> </span><a href="https://40823129.github.io/cd2021/content/index.html">40823129 site</a><span> </span>|</span></p>
-<p><span><a href="https://github.com/40823149/cd2021">40823149 repo<span> </span></a>|<span> </span><a href="https://40823149.github.io/cd2021/content/index.html">40823149 site<span> </span></a>|</span></p>
-<br />W9 << <a href='W9.html'>Previous</a> <a href='task 1.html'>Next</a> >> task 1</div>
+<p><span><a href="https://github.com/40823149/cd2021">40823149 repo<span> </span></a>|<span> </span><a href="https://40823149.github.io/cd2021/content/index.html">40823149 site<span> </span></a>|</span></p><br />W9 << <a href='W9.html'>Previous</a> <a href='task 1.html'>Next</a> >> task 1</div>
         
     <!-- footer -->
       <div class="container">
